# aa-rattingtax

./: .coveragerc  .isort.cfg  MANIFEST.in  Makefile  setup.cfg  tox.ini
rattingtax/: app_settings.py  apps.py  auth_hooks.py  models.py  tasks.py  urls.py  views.py
rattingtax/helper/: serializer.py
rattingtax/migrations/: 0001_initial.py  0002_alter_general_options_corptax.py  0003_corptax_tax_rate.py  0004_alter_corptax_corporation.py  0005_alter_corptax_corporation.py  0006_remove_corptax_id_alter_corptax_corporation.py
rattingtax/templates/rattingtax/: base.html  index.html
testauth/: settings.py
