[metadata]
name = aa_rattingtax
version = attr: rattingtax.__version__
description = App for calculating and invoicing ratting taxes in EVE Online
long_description = file: README.md
long_description_content_type = text/markdown
author = Niclas Titius
author_email = niclas.titius@nicti.de
maintainer = Niclas Titius
maintainer_email = niclas.titius@nicti.de
license = GPL-3.0
license_file = LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
home_page = https://github.com/nicti/aa-rattingtax
keywords =
    allianceauth
    rattingtax
project_urls =
    Issue / Bug Reports = https://github.com/nicti/aa-rattingtax/issues
    Changelog = https://github.com/nicti/aa-rattingtax/blob/master/CHANGELOG.md

[options]
packages = find_namespace:
install_requires =
    allianceauth>=3.0.0
python_requires = ~=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
include = rattingtax*

[options.package_data]
* = *
